--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 			<uniqueVersion>false</uniqueVersion>
 			<id>corp1</id>
 			<name>Corporate Repository</name>
-			<url>scp://repo/maven2</url>
+			<url>http://maven.apache.org/xsd/maven-4.0.0.xsd</url>
 			<layout>default</layout>
 		</repository>
 	</distributionManagement>
