Added : new url

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 			<uniqueVersion>false</uniqueVersion>
 			<id>corp1</id>
 			<name>Corporate Repository</name>
-			<url>scpexe:https://192.168.43.191/D:/Telusko/JunitjJnkins/pom.xml</url>
+			<url>scpexe://maven@myserver.com/</url>
 			<layout>default</layout>
 		</repository>
 	</distributionManagement>
